crates/kapsel-testing/src/snapshots/kapsel_testing__tests__validated_retry_behavior_events.snap
---
source: crates/kapsel-testing/src/lib.rs
expression: retry_events_snapshot
---
Events Table Snapshot
====================

Event 1:
  source_event_id: retry-validation-001
  status: delivered
  failure_count: 1
  attempt_count: 2
  payload_size: 24
  content_type: application/json
  id: [UUID]
  tenant_id: [UUID]
  endpoint_id: [UUID]
  received_at: [TIMESTAMP]
  delivered_at: [TIMESTAMP]
  last_attempt_at: [TIMESTAMP]
  next_retry_at: [TIMESTAMP]
