crates/kapsel-testing/src/snapshots/kapsel_testing__tests__validated_successful_delivery_attempts.snap
---
source: crates/kapsel-testing/src/lib.rs
assertion_line: 2236
expression: attempts_snapshot
---
Delivery Attempts Snapshot
=========================

Attempt 1:
  attempt_number: 1
  request_url: [URL]
  response_status: Some(200)
  duration_ms: 75
  error_type: None
