crates/kapsel-testing/src/snapshots/kapsel_testing__tests__validated_successful_delivery_events.snap
---
source: crates/kapsel-testing/src/lib.rs
assertion_line: 2233
expression: events_snapshot
---
Events Table Snapshot
====================

Event 1:
  source_event_id: validation-test-001
  status: delivered
  failure_count: 0
  attempt_count: 1
  payload_size: 23
  content_type: application/json
  id: [UUID]
  tenant_id: [UUID]
  endpoint_id: [UUID]
  received_at: [TIMESTAMP]
  delivered_at: [TIMESTAMP]
  last_attempt_at: [TIMESTAMP]
